name:                modular-prelude
version:             0.4.0.0
synopsis:            A new Prelude featuring first class modules

homepage:            https://github.com/DanBurton/modular-prelude#readme
license:             MIT
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com

category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     ModularPrelude

                     ,   ModularPrelude.From

                     ,     ModularPrelude.Module.List

                     ,     ModularPrelude.Module.FilePath

                     ,     ModularPrelude.Module.ByteString
                     ,     ModularPrelude.Module.LByteString

                     ,     ModularPrelude.Module.Text
                     ,     ModularPrelude.Module.LText

                     ,     ModularPrelude.Module.Set
                     ,     ModularPrelude.Module.Map

                     ,     ModularPrelude.Module.HashMap
                     ,     ModularPrelude.Module.LHashMap
                     ,     ModularPrelude.Module.HashSet

                     ,     ModularPrelude.Module.Vector
                     ,     ModularPrelude.Module.UVector

  build-depends:       basic-prelude            >= 0.2.0  && < 0.2.1
                     , data-default             >= 0.5.0  && < 0.5.1

                     , hashable

                     , base                     >= 4.3    && < 4.6
                     , system-filepath          >= 0.4    && < 0.5
                     , bytestring               >= 0.9    && < 0.10
                     , text                     >= 0.11   && < 0.12
                     , containers               >= 0.4    && < 0.6
                     , unordered-containers     >= 0.2    && < 0.3
                     , vector                   >= 0.9    && < 0.10

